# project-nova

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOVA-STATUS.md  README.md  USER-GUIDE.md
docs/: ARCHITECTURE.md  DATA-AND-PRIVACY.md  DEVELOPMENT.md  INSTALL.md  README.md  USER-GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: nova-invoke-allowlist.toml
src-tauri/src/: agent_tools.rs  attachments.rs  chat.rs  database_query.rs  lib.rs  memory.rs  personality.rs  pulse.rs  settings.rs
src-tauri/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs  placeholder.rs  types.rs
src/components/chat/: ChatMain.tsx
src/components/layout/: ChatLayout.tsx
src/components/settings/: CompanionPersonalitySection.tsx  SettingsPanel.tsx
src/components/sidebar/: ConversationSidebar.tsx
src/hooks/: useChat.ts  useNovaMemory.ts
src/lib/: chatAttachments.ts  personalityImport.ts
src/styles/: global.css
src/types/: chat.ts
