[package]
name = "nova"
version = "0.1.0"
description = "Nova — portable AI companion platform (Tauri shell)"
authors = ["Nova contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
directories = "5"
opener = "0.8"
uuid = { version = "1", features = ["v4"] }
ring = "0.17"
argon2 = "0.5"
keyring = "3"
base64 = "0.22"
hex = "0.4"
